--- a/index.html
+++ b/index.html
@@ -1,130 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CPI Inflationary and Disinflationary Items</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f9f9f9;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .table-container {
-      display: flex;
-      gap: 40px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    table {
-      border-collapse: collapse;
-      width: 500px;
-      background: white;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-    caption {
-      font-weight: bold;
-      font-size: 1.2em;
-      margin: 10px;
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-      border: 1px solid #ccc;
-    }
-    th {
-      background-color: #004080;
-      color: white;
-    }
-    td:nth-child(2), td:nth-child(3) {
-      text-align: right;
-    }
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>CPI Dis- & Inflation Hot Sheet + Quiz</title>
+<style>
+  :root{
+    --blue:#004080;
+    --green:#147800;
+    --red:#aa0016;
+    --gray:#f2f7fb;
+    --gold:#ffefc2;
+    --font:Arial,Helvetica,sans-serif;
+  }
+  body{margin:0;padding:20px;font-family:var(--font);background:var(--gray);}
+  h1{text-align:center;margin:0 0 20px;}
+  .tables{display:flex;flex-wrap:wrap;gap:40px;justify-content:center;}
+  table{border-collapse:collapse;width:480px;background:#fff;border-radius:6px;overflow:hidden;box-shadow:0 2px 8px rgba(0,0,0,.15);}
+  caption{font-weight:700;font-size:1.3rem;padding:10px;background:var(--blue);color:#fff;}
+  th,td{padding:8px 10px;border-bottom:1px solid #ddd}
+  th{background:var(--gold);text-align:left;font-size:.9rem}
+  td:nth-child(2),td:nth-child(3){text-align:right;font-variant-numeric:tabular-nums;}
+  tr:nth-child(even){background:var(--gray);}
+  /* color code % change */
+  td.change{font-weight:700}
+  td.negative{color:var(--green);}  /* deflation items */
+  td.positive{color:var(--red);}    /* inflation items */
+  /* simple column sorting */
+  th.sortable{cursor:pointer;position:relative;}
+  th.sortable::after{content:"▲";font-size:0.6rem;position:absolute;right:8px;opacity:.4}
+  th.sortable.desc::after{content:"▼";}
+  /* quiz styles */
+  #quiz{max-width:800px;margin:40px auto;background:#fff;border-radius:6px;padding:20px;box-shadow:0 2px 8px rgba(0,0,0,.15);}
+  #quiz h2{margin-top:0;text-align:center}
+  .q{margin:15px 0;}
+  .q p{margin:0 0 6px;font-weight:600;}
+  button{display:block;margin:20px auto 0;padding:10px 25px;font-size:1rem;border:none;border-radius:4px;background:var(--blue);color:#fff;}
+  #result{font-weight:700;text-align:center;margin-top:15px;}
+</style>
 </head>
 <body>
-  <h1>CPI Changes: Disinflation vs. Inflation</h1>
-  <div class="table-container">
-    <table>
-      <caption>CPI Disinflation</caption>
-      <thead>
-        <tr>
-          <th>Item</th>
-          <th>Chg Mo%</th>
-          <th>Item Wgt</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>Eggs</td><td>-12.7</td><td>0.22</td></tr>
-        <tr><td>Propane, kerosene, and firewood</td><td>-4.7</td><td>0.07</td></tr>
-        <tr><td>Frozen fruits and vegetables</td><td>-3.0</td><td>0.07</td></tr>
-        <tr><td>Citrus fruits</td><td>-2.8</td><td>0.06</td></tr>
-        <tr><td>Other fats and oils incl. peanut butter</td><td>-2.8</td><td>0.13</td></tr>
-        <tr><td>Men's shirts and sweaters</td><td>-2.8</td><td>0.16</td></tr>
-        <tr><td>Airline fares</td><td>-2.8</td><td>0.87</td></tr>
-        <tr><td>Fuel oil and other fuels</td><td>-2.6</td><td>0.14</td></tr>
-        <tr><td>Dishes and flatware</td><td>-2.6</td><td>0.04</td></tr>
-        <tr><td>Apparel svcs. other than laundry</td><td>-2.6</td><td>0.03</td></tr>
-        <tr><td>Breakfast cereal</td><td>-2.5</td><td>0.15</td></tr>
-        <tr><td>Other pork incl. roasts, steaks, ribs</td><td>-2.5</td><td>0.09</td></tr>
-        <tr><td>Newspapers and magazines</td><td>-2.3</td><td>0.06</td></tr>
-        <tr><td>Televisions</td><td>-2.1</td><td>0.09</td></tr>
-        <tr><td>Jewelry</td><td>-2.0</td><td>0.15</td></tr>
-        <tr><td>Jewelry and watches</td><td>-1.9</td><td>0.09</td></tr>
-        <tr><td>Other video equipment</td><td>-1.8</td><td>0.03</td></tr>
-        <tr><td>Public transportation</td><td>-1.8</td><td>1.41</td></tr>
-        <tr><td>Other sweets</td><td>-1.7</td><td>0.07</td></tr>
-        <tr><td>Meats, poultry, fish, and eggs</td><td>-1.6</td><td>1.67</td></tr>
-        <tr><td>Bacon, sausage, etc.</td><td>-1.6</td><td>0.34</td></tr>
-        <tr><td>Pork chops</td><td>-1.6</td><td>0.11</td></tr>
-        <tr><td>Processed fruits and vegetables</td><td>-1.6</td><td>0.26</td></tr>
-        <tr><td>Cereals and cereal products</td><td>-1.5</td><td>0.40</td></tr>
-        <tr><td>Fats and oils</td><td>-1.5</td><td>0.25</td></tr>
-      </tbody>
-    </table>
 
-    <table>
-      <caption>CPI Inflationary</caption>
-      <thead>
-        <tr>
-          <th>Item</th>
-          <th>Chg Mo%</th>
-          <th>Item Wgt</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>Food from vending machines</td><td>1.2</td><td>0.06</td></tr>
-        <tr><td>Tools, hardware, supplies</td><td>1.2</td><td>0.24</td></tr>
-        <tr><td>Women's suits and separates</td><td>1.2</td><td>0.37</td></tr>
-        <tr><td>Misc. personal goods</td><td>1.2</td><td>0.06</td></tr>
-        <tr><td>Motor vehicle repair</td><td>1.2</td><td>0.40</td></tr>
-        <tr><td>Major appliances</td><td>1.3</td><td>0.15</td></tr>
-        <tr><td>Financial services</td><td>1.3</td><td>0.25</td></tr>
-        <tr><td>Candy and chewing gum</td><td>1.4</td><td>0.23</td></tr>
-        <tr><td>Energy services</td><td>1.5</td><td>3.16</td></tr>
-        <tr><td>Furniture and bedding</td><td>1.5</td><td>0.78</td></tr>
-        <tr><td>Vehicle accessories (not tires)</td><td>1.5</td><td>0.06</td></tr>
-        <tr><td>Bread</td><td>1.6</td><td>0.25</td></tr>
-        <tr><td>Bedroom furniture</td><td>1.6</td><td>0.26</td></tr>
-        <tr><td>Uncooked other beef and veal</td><td>1.7</td><td>0.06</td></tr>
-        <tr><td>Uncooked poultry incl. turkey</td><td>1.8</td><td>0.07</td></tr>
-        <tr><td>Sports vehicles incl. bicycles</td><td>1.8</td><td>0.23</td></tr>
-        <tr><td>Other beverage mat. incl. tea</td><td>1.9</td><td>0.13</td></tr>
-        <tr><td>Beverage mat. incl. coffee & tea</td><td>2.0</td><td>0.30</td></tr>
-        <tr><td>Photographic equipment</td><td>2.2</td><td>0.04</td></tr>
-        <tr><td>Coffee</td><td>2.4</td><td>0.24</td></tr>
-        <tr><td>Living room/kitchen/dining furn.</td><td>2.4</td><td>0.30</td></tr>
-        <tr><td>Computer software & accessories</td><td>2.6</td><td>0.03</td></tr>
-        <tr><td>Utility</td><td>3.7</td><td>0.77</td></tr>
-        <tr><td>Car and truck rental</td><td>4.3</td><td>0.15</td></tr>
-        <tr><td>Audio equipment</td><td>8.8</td><td>0.07</td></tr>
-      </tbody>
-    </table>
+<h1>CPI Movers – April 2025</h1>
+
+<div class="tables">
+  <!-- DISINFLATION -->
+  <table id="disTable">
+    <caption>CPI Disinflation</caption>
+    <thead>
+      <tr>
+        <th class="sortable">Item</th>
+        <th class="sortable">Chg Mo %</th>
+        <th class="sortable">Item Wgt</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Eggs</td><td class="change negative">-12.7</td><td>0.22</td></tr>
+      <tr><td>Propane, kerosene, and firewood</td><td class="change negative">-4.7</td><td>0.07</td></tr>
+      <tr><td>Frozen fruits and vegetables</td><td class="change negative">-3.0</td><td>0.07</td></tr>
+      <tr><td>Citrus fruits</td><td class="change negative">-2.8</td><td>0.06</td></tr>
+      <tr><td>Other fats & oils incl. peanut butter</td><td class="change negative">-2.8</td><td>0.13</td></tr>
+      <tr><td>Men’s shirts & sweaters</td><td class="change negative">-2.8</td><td>0.16</td></tr>
+      <tr><td>Airline fares</td><td class="change negative">-2.8</td><td>0.87</td></tr>
+      <tr><td>Fuel oil & other fuels</td><td class="change negative">-2.6</td><td>0.14</td></tr>
+      <tr><td>Dishes & flatware</td><td class="change negative">-2.6</td><td>0.04</td></tr>
+      <tr><td>Apparel svcs. ex-laundry</td><td class="change negative">-2.6</td><td>0.03</td></tr>
+      <tr><td>Breakfast cereal</td><td class="change negative">-2.5</td><td>0.15</td></tr>
+      <tr><td>Other pork roasts, steaks, ribs</td><td class="change negative">-2.5</td><td>0.09</td></tr>
+      <tr><td>Newspapers & magazines</td><td class="change negative">-2.3</td><td>0.06</td></tr>
+      <tr><td>Televisions</td><td class="change negative">-2.1</td><td>0.09</td></tr>
+      <tr><td>Jewelry</td><td class="change negative">-2.0</td><td>0.15</td></tr>
+      <tr><td>Jewelry & watches</td><td class="change negative">-1.9</td><td>0.09</td></tr>
+      <tr><td>Other video equipment</td><td class="change negative">-1.8</td><td>0.03</td></tr>
+      <tr><td>Public transportation</td><td class="change negative">-1.8</td><td>1.41</td></tr>
+      <tr><td>Other sweets</td><td class="change negative">-1.7</td><td>0.07</td></tr>
+      <tr><td>Meats, poultry, fish, eggs</td><td class="change negative">-1.6</td><td>1.67</td></tr>
+      <tr><td>Bacon & related</td><td class="change negative">-1.6</td><td>0.34</td></tr>
+      <tr><td>Pork chops</td><td class="change negative">-1.6</td><td>0.11</td></tr>
+      <tr><td>Processed fruits & veg.</td><td class="change negative">-1.6</td><td>0.26</td></tr>
+      <tr><td>Cereals & cereal products</td><td class="change negative">-1.5</td><td>0.40</td></tr>
+      <tr><td>Fats and oils</td><td class="change negative">-1.5</td><td>0.25</td></tr>
+    </tbody>
+  </table>
+
+  <!-- INFLATION -->
+  <table id="infTable">
+    <caption>CPI Inflationary</caption>
+    <thead>
+      <tr>
+        <th class="sortable">Item</th>
+        <th class="sortable">Chg Mo %</th>
+        <th class="sortable">Item Wgt</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Food – vending/mobile</td><td class="change positive">1.2</td><td>0.06</td></tr>
+      <tr><td>Tools, hardware, supplies</td><td class="change positive">1.2</td><td>0.24</td></tr>
+      <tr><td>Women’s suits & separates</td><td class="change positive">1.2</td><td>0.37</td></tr>
+      <tr><td>Misc. personal goods</td><td class="change positive">1.2</td><td>0.06</td></tr>
+      <tr><td>Motor vehicle repair</td><td class="change positive">1.2</td><td>0.40</td></tr>
+      <tr><td>Major appliances</td><td class="change positive">1.3</td><td>0.15</td></tr>
+      <tr><td>Financial services</td><td class="change positive">1.3</td><td>0.25</td></tr>
+      <tr><td>Candy & chewing gum</td><td class="change positive">1.4</td><td>0.23</td></tr>
+      <tr><td>Energy services</td><td class="change positive">1.5</td><td>3.16</td></tr>
+      <tr><td>Furniture & bedding</td><td class="change positive">1.5</td><td>0.78</td></tr>
+      <tr><td>Vehicle accessories (ex-tires)</td><td class="change positive">1.5</td><td>0.06</td></tr>
+      <tr><td>Bread</td><td class="change positive">1.6</td><td>0.25</td></tr>
+      <tr><td>Bedroom furniture</td><td class="change positive">1.6</td><td>0.26</td></tr>
+      <tr><td>Uncooked beef & veal (other)</td><td class="change positive">1.7</td><td>0.06</td></tr>
+      <tr><td>Uncooked poultry incl. turkey</td><td class="change positive">1.8</td><td>0.07</td></tr>
+      <tr><td>Sports vehicles & bicycles</td><td class="change positive">1.8</td><td>0.23</td></tr>
+      <tr><td>Other beverage materials (tea)</td><td class="change positive">1.9</td><td>0.13</td></tr>
+      <tr><td>Beverage materials – coffee/tea</td><td class="change positive">2.0</td><td>0.30</td></tr>
+      <tr><td>Photo equipment & supplies</td><td class="change positive">2.2</td><td>0.04</td></tr>
+      <tr><td>Coffee</td><td class="change positive">2.4</td><td>0.24</td></tr>
+      <tr><td>Living-room/kitchen/dining furn.</td><td class="change positive">2.4</td><td>0.30</td></tr>
+      <tr><td>Software & accessories</td><td class="change positive">2.6</td><td>0.03</td></tr>
+      <tr><td>Utility</td><td class="change positive">3.7</td><td>0.77</td></tr>
+      <tr><td>Car & truck rental</td><td class="change positive">4.3</td><td>0.15</td></tr>
+      <tr><td>Audio equipment</td><td class="change positive">8.8</td><td>0.07</td></tr>
+    </tbody>
+  </table>
+</div>
+
+<!-- QUIZ -->
+<section id="quiz">
+  <h2>Quick Quiz – Test Your CPI IQ</h2>
+
+  <div class="q" data-answer="Eggs">
+    <p>1️⃣ Which item recorded the steepest monthly price drop?</p>
+    <input type="text" placeholder="Your answer here">
   </div>
+
+  <div class="q" data-answer="Audio equipment">
+    <p>2️⃣ Which category saw the biggest monthly increase?</p>
+    <input type="text" placeholder="Your answer here">
+  </div>
+
+  <div class="q" data-answer="-12.7">
+    <p>3️⃣ What was the percentage change for eggs (use sign and one decimal)?</p>
+    <input type="text" placeholder="e.g., -3.2">
+  </div>
+
+  <div class="q" data-answer="1.5">
+    <p>4️⃣ Furniture & bedding prices climbed by how many percent?</p>
+    <input type="text" placeholder="e.g., 1.2">
+  </div>
+
+  <div class="q" data-answer="Vending">
+    <p>5️⃣ Complete this phrase: “Food from _______ machines and mobile vendors.”</p>
+    <input type="text" placeholder="Your answer here">
+  </div>
+
+  <button id="submit">Grade Me</button>
+  <div id="result"></div>
+</section>
+
+<script>
+/* ---------- sortable columns ---------- */
+document.querySelectorAll('th.sortable').forEach(th=>{
+  th.addEventListener('click', ()=>sortTable(th));
+});
+function sortTable(th){
+  const table=th.closest('table');
+  const tbody=table.tBodies[0];
+  const idx=[...th.parentNode.children].indexOf(th);
+  const isNum=idx>0;
+  const dir=th.classList.toggle('desc')? -1:1;
+  [...tbody.rows]
+    .sort((a,b)=>{
+      const A=isNum?parseFloat(a.cells[idx].textContent):a.cells[idx].textContent.toLowerCase();
+      const B=isNum?parseFloat(b.cells[idx].textContent):b.cells[idx].textContent.toLowerCase();
+      return (A>B?1:-1)*dir;
+    })
+    .forEach(tr=>tbody.appendChild(tr));
+}
+/* ---------- quiz logic ---------- */
+document.getElementById('submit').addEventListener('click',()=>{
+  let correct=0;
+  document.querySelectorAll('#quiz .q').forEach(q=>{
+    const user=q.querySelector('input').value.trim();
+    const answer=q.dataset.answer;
+    if(user.toLowerCase()==answer.toLowerCase()) correct++;
+  });
+  const out=`You scored ${correct} / 5`;
+  document.getElementById('result').textContent=out;
+});
+</script>
+
 </body>
 </html>
