--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <!-- --------------- INFLATION TABLE --------------- -->
   <table id="infTable">
-    <caption>Trump Inflationary</caption>
+    <caption>Trump Inflation</caption>
     <thead>
       <tr>
         <th class="sortable">Item</th>
