--- a/index.html
+++ b/index.html
@@ -1,111 +1,325 @@
-<style>
-  :root {
-    --blue: #003366;
-    --green: #147800;
-    --red: #aa0016;
-    --bg-light: #ffffff;
-    --bg-alt: #e8f1f9;
-    --border: #b0b0b0;
-    --font: Arial,Helvetica,sans-serif;
-  }
-  body {
-    margin: 0;
-    padding: 20px;
-    font-family: var(--font);
-    background: #f2f7fb;
-  }
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: var(--blue);
-  }
-  .tables {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-    justify-content: center;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>CPI Hot Sheet + Quiz</title>
+  <style>
+    :root {
+      --blue: #003366;
+      --green: #147800;
+      --red: #aa0016;
+      --bg-light: #ffffff;
+      --bg-alt: #e8f1f9;
+      --border: #b0b0b0;
+      --font: Arial,Helvetica,sans-serif;
+    }
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: var(--font);
+      background: #f2f7fb;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: var(--blue);
+    }
+    .tables {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      justify-content: center;
+    }
 
-  table {
-    border-collapse: collapse;
-    width: 480px;
-    background: var(--bg-light);
-    border: 2px solid var(--border);
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
-  }
-  caption {
-    font-weight: 700;
-    font-size: 1.3rem;
-    padding: 12px;
-    background: var(--blue);
-    color: #fff;
-  }
-  th, td {
-    padding: 12px 10px;
-    border-bottom: 1px solid var(--border);
-    border-right: 1px solid var(--border);
-    font-size: .95rem;
-  }
-  /* remove right border on last column */
-  th:last-child, td:last-child {
-    border-right: none;
-  }
-  th {
-    background: var(--blue);
-    color: #fff;
-    text-align: left;
-  }
-  /* alternate row backgrounds */
-  tbody tr:nth-child(odd) {
-    background: var(--bg-light);
-  }
-  tbody tr:nth-child(even) {
-    background: var(--bg-alt);
-  }
-  /* hover highlight */
-  tbody tr:hover {
-    background: #d0e4f7;
-  }
-  /* numeric columns */
-  td:nth-child(2), td:nth-child(3) {
-    text-align: right;
-    font-variant-numeric: tabular-nums;
-  }
-  /* color coded deltas */
-  td.change { font-weight: 700; }
-  td.negative { color: var(--green); }
-  td.positive { color: var(--red); }
+    table {
+      border-collapse: collapse;
+      width: 480px;
+      background: var(--bg-light);
+      border: 2px solid var(--border);
+      border-radius: 6px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
+    }
+    caption {
+      font-weight: 700;
+      font-size: 1.3rem;
+      padding: 12px;
+      background: var(--blue);
+      color: #fff;
+    }
+    th, td {
+      padding: 12px 10px;
+      border-bottom: 1px solid var(--border);
+      border-right: 1px solid var(--border);
+      font-size: .95rem;
+    }
+    th:last-child,
+    td:last-child {
+      border-right: none;
+    }
+    th {
+      background: var(--blue);
+      color: #fff;
+      text-align: left;
+    }
+    tbody tr:nth-child(odd) {
+      background: var(--bg-light);
+    }
+    tbody tr:nth-child(even) {
+      background: var(--bg-alt);
+    }
+    tbody tr:hover {
+      background: #d0e4f7;
+    }
+    td:nth-child(2),
+    td:nth-child(3) {
+      text-align: right;
+      font-variant-numeric: tabular-nums;
+    }
+    td.change {
+      font-weight: 700;
+    }
+    td.negative {
+      color: var(--green);
+    }
+    td.positive {
+      color: var(--red);
+    }
+    th.sortable {
+      cursor: pointer;
+      position: relative;
+    }
+    th.sortable::after {
+      content: "▴";
+      font-size: 0.6rem;
+      position: absolute;
+      right: 8px;
+      opacity: .4;
+    }
+    th.sortable.desc::after {
+      content: "▾";
+    }
 
-  /* sortable headers */
-  th.sortable { cursor: pointer; position: relative; }
-  th.sortable::after {
-    content: "▴";
-    font-size: 0.6rem;
-    position: absolute;
-    right: 8px;
-    opacity: .4;
-  }
-  th.sortable.desc::after {
-    content: "▾";
-  }
+    /* quiz styles */
+    #quiz {
+      max-width: 860px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 6px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
+    }
+    #quiz h2 {
+      text-align: center;
+      margin-top: 0;
+    }
+    .q {
+      margin: 18px 0;
+    }
+    .q p {
+      margin: 0 0 8px;
+      font-weight: 600;
+    }
+    .q label {
+      display: block;
+      margin: 3px 0;
+      cursor: pointer;
+    }
+    .q.correct {
+      border-left: 4px solid var(--green);
+      padding-left: 6px;
+    }
+    .q.incorrect {
+      border-left: 4px solid var(--red);
+      padding-left: 6px;
+    }
+    #grade {
+      display: block;
+      margin: 25px auto 0;
+      padding: 10px 25px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      background: var(--blue);
+      color: #fff;
+    }
+    #score {
+      font-weight: 700;
+      text-align: center;
+      margin-top: 18px;
+      font-size: 1.1rem;
+    }
+  </style>
+</head>
+<body>
 
-  /* quiz styles – unchanged */
-  #quiz {
-    max-width: 860px;
-    margin: 40px auto;
-    background: #fff;
-    border-radius: 6px;
-    padding: 20px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
-  }
-  #quiz h2 { text-align: center; margin-top: 0; }
-  .q { margin: 18px 0; }
-  .q p { margin: 0 0 8px; font-weight: 600; }
-  .q label { display: block; margin: 3px 0; cursor: pointer; }
-  .q.correct { border-left: 4px solid var(--green); padding-left: 6px; }
-  .q.incorrect { border-left: 4px solid var(--red); padding-left: 6px; }
-  #grade { display: block; margin: 25px auto 0; padding: 10px 25px; font-size: 1rem; border: none; border-radius: 4px; background: var(--blue); color: #fff; }
-  #score { font-weight: 700; text-align: center; margin-top: 18px; font-size: 1.1rem; }
-</style>
+  <h1>CPI Movers – April 2025</h1>
+
+  <div class="tables">
+    <!-- DISINFLATION TABLE -->
+    <table id="disTable">
+      <caption>CPI Disinflation</caption>
+      <thead>
+        <tr>
+          <th class="sortable">Item</th>
+          <th class="sortable">Chg Mo %</th>
+          <th class="sortable">Item Wgt</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>Eggs</td><td class="change negative">-12.7</td><td>0.22</td></tr>
+        <tr><td>Propane, kerosene, and firewood</td><td class="change negative">-4.7</td><td>0.07</td></tr>
+        <tr><td>Frozen fruits and vegetables</td><td class="change negative">-3.0</td><td>0.07</td></tr>
+        <tr><td>Citrus fruits</td><td class="change negative">-2.8</td><td>0.06</td></tr>
+        <tr><td>Other fats & oils incl. peanut butter</td><td class="change negative">-2.8</td><td>0.13</td></tr>
+        <tr><td>Men’s shirts & sweaters</td><td class="change negative">-2.8</td><td>0.16</td></tr>
+        <tr><td>Airline fares</td><td class="change negative">-2.8</td><td>0.87</td></tr>
+        <tr><td>Fuel oil & other fuels</td><td class="change negative">-2.6</td><td>0.14</td></tr>
+        <tr><td>Dishes & flatware</td><td class="change negative">-2.6</td><td>0.04</td></tr>
+        <tr><td>Apparel svcs. ex-laundry</td><td class="change negative">-2.6</td><td>0.03</td></tr>
+        <tr><td>Breakfast cereal</td><td class="change negative">-2.5</td><td>0.15</td></tr>
+        <tr><td>Other pork roasts, steaks, ribs</td><td class="change negative">-2.5</td><td>0.09</td></tr>
+        <tr><td>Newspapers & magazines</td><td class="change negative">-2.3</td><td>0.06</td></tr>
+        <tr><td>Televisions</td><td class="change negative">-2.1</td><td>0.09</td></tr>
+        <tr><td>Jewelry</td><td class="change negative">-2.0</td><td>0.15</td></tr>
+        <tr><td>Jewelry & watches</td><td class="change negative">-1.9</td><td>0.09</td></tr>
+        <tr><td>Other video equipment</td><td class="change negative">-1.8</td><td>0.03</td></tr>
+        <tr><td>Public transportation</td><td class="change negative">-1.8</td><td>1.41</td></tr>
+        <tr><td>Other sweets</td><td class="change negative">-1.7</td><td>0.07</td></tr>
+        <tr><td>Meats, poultry, fish, eggs</td><td class="change negative">-1.6</td><td>1.67</td></tr>
+        <tr><td>Bacon & related</td><td class="change negative">-1.6</td><td>0.34</td></tr>
+        <tr><td>Pork chops</td><td class="change negative">-1.6</td><td>0.11</td></tr>
+        <tr><td>Processed fruits & veg.</td><td class="change negative">-1.6</td><td>0.26</td></tr>
+        <tr><td>Cereals & cereal products</td><td class="change negative">-1.5</td><td>0.40</td></tr>
+        <tr><td>Fats and oils</td><td class="change negative">-1.5</td><td>0.25</td></tr>
+      </tbody>
+    </table>
+
+    <!-- INFLATION TABLE -->
+    <table id="infTable">
+      <caption>CPI Inflationary</caption>
+      <thead>
+        <tr>
+          <th class="sortable">Item</th>
+          <th class="sortable">Chg Mo %</th>
+          <th class="sortable">Item Wgt</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>Food – vending/mobile</td><td class="change positive">1.2</td><td>0.06</td></tr>
+        <tr><td>Tools, hardware, supplies</td><td class="change positive">1.2</td><td>0.24</td></tr>
+        <tr><td>Women’s suits & separates</td><td class="change positive">1.2</td><td>0.37</td></tr>
+        <tr><td>Misc. personal goods</td><td class="change positive">1.2</td><td>0.06</td></tr>
+        <tr><td>Motor vehicle repair</td><td class="change positive">1.2</td><td>0.40</td></tr>
+        <tr><td>Major appliances</td><td class="change positive">1.3</td><td>0.15</td></tr>
+        <tr><td>Financial services</td><td class="change positive">1.3</td><td>0.25</td></tr>
+        <tr><td>Candy & chewing gum</td><td class="change positive">1.4</td><td>0.23</td></tr>
+        <tr><td>Energy services</td><td class="change positive">1.5</td><td>3.16</td></tr>
+        <tr><td>Furniture & bedding</td><td class="change positive">1.5</td><td>0.78</td></tr>
+        <tr><td>Vehicle accessories (ex-tires)</td><td class="change positive">1.5</td><td>0.06</td></tr>
+        <tr><td>Bread</td><td class="change positive">1.6</td><td>0.25</td></tr>
+        <tr><td>Bedroom furniture</td><td class="change positive">1.6</td><td>0.26</td></tr>
+        <tr><td>Uncooked beef & veal (other)</td><td class="change positive">1.7</td><td>0.06</td></tr>
+        <tr><td>Uncooked poultry incl. turkey</td><td class="change positive">1.8</td><td>0.07</td></tr>
+        <tr><td>Sports vehicles & bicycles</td><td class="change positive">1.8</td><td>0.23</td></tr>
+        <tr><td>Other beverage materials (tea)</td><td class="change positive">1.9</td><td>0.13</td></tr>
+        <tr><td>Beverage materials – coffee/tea</td><td class="change positive">2.0</td><td>0.30</td></tr>
+        <tr><td>Photo equipment & supplies</td><td class="change positive">2.2</td><td>0.04</td></tr>
+        <tr><td>Coffee</td><td class="change positive">2.4</td><td>0.24</td></tr>
+        <tr><td>Living-room/kitchen/dining furn.</td><td class="change positive">2.4</td><td>0.30</td></tr>
+        <tr><td>Software & accessories</td><td class="change positive">2.6</td><td>0.03</td></tr>
+        <tr><td>Utility</td><td class="change positive">3.7</td><td>0.77</td></tr>
+        <tr><td>Car & truck rental</td><td class="change positive">4.3</td><td>0.15</td></tr>
+        <tr><td>Audio equipment</td><td class="change positive">8.8</td><td>0.07</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- QUIZ -->
+  <section id="quiz">
+    <h2>Quick Quiz – Test Your CPI IQ</h2>
+    <form id="quizForm">
+      <div class="q" data-answer="Eggs">
+        <p>1️⃣ Which item recorded the steepest monthly price drop?</p>
+        <label><input type="radio" name="q1" value="Eggs">A) Eggs</label>
+        <label><input type="radio" name="q1" value="Public transportation">B) Public transportation</label>
+        <label><input type="radio" name="q1" value="Airline fares">C) Airline fares</label>
+        <label><input type="radio" name="q1" value="Frozen fruits and vegetables">D) Frozen fruits & veg.</label>
+      </div>
+      <div class="q" data-answer="Audio equipment">
+        <p>2️⃣ Which category saw the biggest monthly increase?</p>
+        <label><input type="radio" name="q2" value="Audio equipment">A) Audio equipment</label>
+        <label><input type="radio" name="q2" value="Coffee">B) Coffee</label>
+        <label><input type="radio" name="q2" value="Energy services">C) Energy services</label>
+        <label><input type="radio" name="q2" value="Candy & chewing gum">D) Candy & chewing gum</label>
+      </div>
+      <div class="q" data-answer="-12.7">
+        <p>3️⃣ Eggs changed by ___ percent.</p>
+        <label><input type="radio" name="q3" value="-12.7">A) -12.7 %</label>
+        <label><input type="radio" name="q3" value="-8.8">B) -8.8 %</label>
+        <label><input type="radio" name="q3" value="-4.7">C) -4.7 %</label>
+        <label><input type="radio" name="q3" value="-2.8">D) -2.8 %</label>
+      </div>
+      <div class="q" data-answer="1.5">
+        <p>4️⃣ Furniture & bedding prices climbed by ___ percent.</p>
+        <label><input type="radio" name="q4" value="0.8">A) 0.8 %</label>
+        <label><input type="radio" name="q4" value="1.5">B) 1.5 %</label>
+        <label><input type="radio" name="q4" value="2.4">C) 2.4 %</label>
+        <label><input type="radio" name="q4" value="3.7">D) 3.7 %</label>
+      </div>  
+      <div class="q" data-answer="Vending">
+        <p>5️⃣ Complete the phrase: “Food from ___ machines and mobile vendors.”</p>
+        <label><input type="radio" name="q5" value="ATM">A) ATM</label>
+        <label><input type="radio" name="q5" value="Coffee">B) Coffee</label>
+        <label><input type="radio" name="q5" value="Vending">C) Vending</label>
+        <label><input type="radio" name="q5" value="Slot">D) Slot</label>
+      </div>
+      <button type="button" id="grade">Grade Me</button>
+    </form>
+    <div id="score"></div>
+  </section>
+
+  <script>
+    // sortable columns
+    document.querySelectorAll('th.sortable').forEach(th => {
+      th.addEventListener('click', () => sortTable(th));
+    });
+    function sortTable(th) {
+      const table = th.closest('table'),
+            tbody = table.tBodies[0],
+            idx = [...th.parentNode.children].indexOf(th),
+            isNum = idx > 0,
+            dir = th.classList.toggle('desc') ? -1 : 1;
+      [...tbody.rows]
+        .sort((a, b) => {
+          const A = isNum ? parseFloat(a.cells[idx].innerText) : a.cells[idx].innerText.toLowerCase();
+          const B = isNum ? parseFloat(b.cells[idx].innerText) : b.cells[idx].innerText.toLowerCase();
+          return (A > B ? 1 : -1) * dir;
+        })
+        .forEach(r => tbody.appendChild(r));
+    }
+
+    // quiz logic
+    document.getElementById('grade').addEventListener('click', () => {
+      let correct = 0;
+      document.querySelectorAll('#quiz .q').forEach(q => {
+        q.classList.remove('correct','incorrect');
+        const ans = q.dataset.answer;
+        const sel = q.querySelector('input:checked');
+        if (!sel) return;
+        if (sel.value === ans) {
+          q.classList.add('correct');
+          correct++;
+        } else {
+          q.classList.add('incorrect');
+          [...q.querySelectorAll('input')].forEach(i => {
+            if (i.value === ans) i.parentNode.style.fontWeight = '700';
+          });
+        }
+      });
+      document.getElementById('score').innerText = `You scored ${correct} / 5`;
+    });
+  </script>
+
+</body>
+</html>
