--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
   <div class="tables">
     <!-- DISINFLATION TABLE -->
     <table id="disTable">
-      <caption>CPI Disinflation</caption>
+      <caption>Trump Disinflation</caption>
       <thead>
         <tr>
           <th class="sortable">Item</th>
@@ -198,7 +198,7 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
 
     <!-- INFLATION TABLE -->
     <table id="infTable">
-      <caption>CPI Inflationary</caption>
+      <caption>Trump Inflation</caption>
       <thead>
         <tr>
           <th class="sortable">Item</th>
