--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Below is the **complete** `index.html`, with **both** CPI tables (bolded via an `!important` override) **and** the full multiple‐choice quiz + sorting & grading scripts. Replace your existing file with this, push to GitHub, wait \~30 s, then hard‐refresh:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -94,7 +91,6 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
     th.sortable.desc::after {
       content: "▾";
     }
-
     /* quiz styles */
     #quiz {
       max-width: 860px;
@@ -144,8 +140,7 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
       margin-top: 18px;
       font-size: 1.1rem;
     }
-
-    /* FORCE ALL TABLE TEXT BOLD */
+    /* override to force bold in both tables */
     #disTable th, #disTable td,
     #infTable th, #infTable td {
       font-weight: 700 !important;
@@ -159,7 +154,7 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
   <div class="tables">
     <!-- DISINFLATION TABLE -->
     <table id="disTable">
-      <caption>Trump Disinflation</caption>
+      <caption>CPI Disinflation</caption>
       <thead>
         <tr>
           <th class="sortable">Item</th>
@@ -198,7 +193,7 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
 
     <!-- INFLATION TABLE -->
     <table id="infTable">
-      <caption>Trump Inflation</caption>
+      <caption>CPI Inflationary</caption>
       <thead>
         <tr>
           <th class="sortable">Item</th>
@@ -224,108 +219,4 @@ Below is the **complete** `index.html`, with **both** CPI tables (bolded via an 
         <tr><td>Uncooked poultry incl. turkey</td><td class="positive">1.8</td><td>0.07</td></tr>
         <tr><td>Sports vehicles & bicycles</td><td class="positive">1.8</td><td>0.23</td></tr>
         <tr><td>Other beverage materials (tea)</td><td class="positive">1.9</td><td>0.13</td></tr>
-        <tr><td>Beverage materials – coffee/tea</td><td class="positive">2.0</td><td>0.30</td></tr>
-        <tr><td>Photo equipment & supplies</td><td class="positive">2.2</td><td>0.04</td></tr>
-        <tr><td>Coffee</td><td class="positive">2.4</td><td>0.24</td></tr>
-        <tr><td>Living-room/kitchen/dining furn.</td><td class="positive">2.4</td><td>0.30</td></tr>
-        <tr><td>Software & accessories</td><td class="positive">2.6</td><td>0.03</td></tr>
-        <tr><td>Utility</td><td class="positive">3.7</td><td>0.77</td></tr>
-        <tr><td>Car & truck rental</td><td class="positive">4.3</td><td>0.15</td></tr>
-        <tr><td>Audio equipment</td><td class="positive">8.8</td><td>0.07</td></tr>
-      </tbody>
-    </table>
-  </div>
-
-  <!-- QUIZ -->
-  <section id="quiz">
-    <h2>Quick Quiz – Test Your CPI IQ</h2>
-    <form id="quizForm">
-      <div class="q" data-answer="Eggs">
-        <p>1️⃣ Which item recorded the steepest monthly price drop?</p>
-        <label><input type="radio" name="q1" value="Eggs">A) Eggs</label>
-        <label><input type="radio" name="q1" value="Public transportation">B) Public transportation</label>
-        <label><input type="radio" name="q1" value="Airline fares">C) Airline fares</label>
-        <label><input type="radio" name="q1" value="Frozen fruits and vegetables">D) Frozen fruits & veg.</label>
-      </div>
-      <div class="q" data-answer="Audio equipment">
-        <p>2️⃣ Which category saw the biggest monthly increase?</p>
-        <label><input type="radio" name="q2" value="Audio equipment">A) Audio equipment</label>
-        <label><input type="radio" name="q2" value="Coffee">B) Coffee</label>
-        <label><input type="radio" name="q2" value="Energy services">C) Energy services</label>
-        <label><input type="radio" name="q2" value="Candy & chewing gum">D) Candy & chewing gum</label>
-      </div>
-      <div class="q" data-answer="-12.7">
-        <p>3️⃣ Eggs changed by ___ percent.</p>
-        <label><input type="radio" name="q3" value="-12.7">A) -12.7 %</label>
-        <label><input type="radio" name="q3" value="-8.8">B) -8.8 %</label>
-        <label><input type="radio" name="q3" value="-4.7">C) -4.7 %</label>
-        <label><input type="radio" name="q3" value="-2.8">D) -2.8 %</label>
-      </div>
-      <div class="q" data-answer="1.5">
-        <p>4️⃣ Furniture & bedding prices climbed by ___ percent.</p>
-        <label><input type="radio" name="q4" value="0.8">A) 0.8 %</label>
-        <label><input type="radio" name="q4" value="1.5">B) 1.5 %</label>
-        <label><input type="radio" name="q4" value="2.4">C) 2.4 %</label>
-        <label><input type="radio" name="q4" value="3.7">D) 3.7 %</label>
-      </div>  
-      <div class="q" data-answer="Vending">
-        <p>5️⃣ Complete the phrase: “Food from ___ machines and mobile vendors.”</p>
-        <label><input type="radio" name="q5" value="ATM">A) ATM</label>
-        <label><input type="radio" name="q5" value="Coffee">B) Coffee</label>
-        <label><input type="radio" name="q5" value="Vending">C) Vending</label>
-        <label><input type="radio" name="q5" value="Slot">D) Slot</label>
-      </div>
-      <button type="button" id="grade">Grade Me</button>
-    </form>
-    <div id="score"></div>
-  </section>
-
-  <script>
-    // sortable columns
-    document.querySelectorAll('th.sortable').forEach(th => {
-      th.addEventListener('click', () => {
-        const table = th.closest('table'),
-              tbody = table.tBodies[0],
-              idx = [...th.parentNode.children].indexOf(th),
-              isNum = idx > 0,
-              dir = th.classList.toggle('desc') ? -1 : 1;
-        [...tbody.rows]
-          .sort((a, b) => {
-            const A = isNum
-              ? parseFloat(a.cells[idx].innerText)
-              : a.cells[idx].innerText.toLowerCase();
-            const B = isNum
-              ? parseFloat(b.cells[idx].innerText)
-              : b.cells[idx].innerText.toLowerCase();
-            return (A > B ? 1 : -1) * dir;
-          })
-          .forEach(r => tbody.appendChild(r));
-      });
-    });
-
-    // quiz logic
-    document.getElementById('grade').addEventListener('click', () => {
-      let correct = 0;
-      document.querySelectorAll('#quiz .q').forEach(q => {
-        q.classList.remove('correct','incorrect');
-        const ans = q.dataset.answer;
-        const sel = q.querySelector('input:checked');
-        if (!sel) return;
-        if (sel.value === ans) {
-          q.classList.add('correct');
-          correct++;
-        } else {
-          q.classList.add('incorrect');
-          // highlight correct option
-          q.querySelectorAll('input').forEach(i => {
-            if (i.value === ans) i.parentNode.style.fontWeight = '700';
-          });
-        }
-      });
-      document.getElementById('score').innerText = `You scored ${correct} / 5`;
-    });
-  </script>
-
-</body>
-</html>
-```
+        <tr><td>Beverage materials – coffee/tea</td><td class="positive">2.0</td><td>0.30</td
